[gd_scene load_steps=2 format=2]

[ext_resource path="res://v2/core/camera/MyCamera.gd" type="Script" id=1]

[node name="MyCamera" type="Camera2D"]
pause_mode = 2
position = Vector2( 158, 105 )
current = true
smoothing_enabled = true
script = ExtResource( 1 )

[node name="CloseTween" type="Tween" parent="."]

[node name="CloseTimer" type="Timer" parent="."]
wait_time = 0.025
one_shot = true
[connection signal="timeout" from="CloseTimer" to="." method="_on_CloseTimer_timeout"]
